--- a/src/styles/ui-components.css
+++ b/src/styles/ui-components.css
@@ -456,7 +456,7 @@
 .ui-modal {
   position: fixed;
   inset: 0;
-  z-index: 90;
+  z-index: 1200;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -473,7 +473,7 @@
 }
 
 .ui-modal--raised {
-  z-index: 100;
+  z-index: 1210;
 }
 
 .ui-modal__backdrop {
